# screenr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/test/: test.fasta  test.fastq
src/: lib.rs  main.rs
src/crispr/: library.rs  matcher.rs  mod.rs  utils.rs
src/reader/: fasta.rs  fasta_gz.rs  fastq.rs  fastq_gz.rs  mod.rs  reader.rs  record.rs
tests/: run_tests.rs
